# bevy_card_game

./: Cargo.toml  README.md
.github/workflows/: release.yaml
assets/: Bevy_BattleArena.ldtk  Bevy_BattleArena2.ldtk  bevy.ldtk  bevy2.ldtk  bevy3.ldtk  cards.ldtk  game_settings.config  test.ldtk  test_small.ldtk  test_tileset.ldtk  units.ldtk  units_DONTUSE.ldtk  units_archer.ldtk  units_battleCard.ldtk  units_slime.ldtk  units_snake.ldtk  units_wizard.ldtk
assets/abilities/: archer_shoot.prefab
assets/arena/: layout.prefab
assets/arena_test/backups/: arena_test___2022-02-28__09-55-56__crash.backup.ldtk
assets/ldtk/old/: arena.ldtk  bevy.ldtk  bevy3.ldtk  map_TEST.ldtk  test.ldtk  units.ldtk  units_BattleCardPreMade.ldtk  units_DONTUSE.ldtk
assets/ldtk/prefabs/: units_archer.ldtk  units_battleCard.ldtk  units_slime.ldtk  units_snake.ldtk  units_wizard.ldtk
assets/units/: archer.prefab  guy.prefab  guy.unit
src/: animation.rs  assets.rs  camera.rs  config.rs  debug.rs  grid.rs  input.rs  main.rs  party.rs  prefabs.rs  unit.rs  util.rs
src/arena/: cards.rs  combat.rs  config.rs  load.rs  mod.rs  render.rs  test.rs  units.rs
src/assets/: abilities.rs  animations.rs  assets.rs  mod.rs  spawn.rs  test.rs  unit.rs
src/battle_map/: animated.rs  combat.rs  components.rs  enemies.rs  input.rs  map.rs  mod.rs  player.rs  render.rs  selection.rs  setup.rs  spawn.rs  states.rs  units.rs
src/ldtk_loader/: asset.rs  loader.rs  map_builder.rs  mod.rs
src/prefab/: arena.rs  battle_map.rs  card.rs  mod.rs  prefab.rs  unit.rs
src/unit_test/: mod.rs
(+4 files in other folders)
