[package]
name = "bevy_card_game"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version="0.6", default-features=false, features=["bevy_winit", "bevy_render", "png"] }
bevy_tiled_camera = "0.3.0"
bevy_ascii_terminal = { git = "https://github.com/sarkahn/bevy_ascii_terminal", branch = "trait_formatting" }
ron = "0.7.0"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.54"
sark_pathfinding = "0.1.2"
bevy_easings = "0.6.0"